# WeatherAppCpp

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  flake.nix
jenkins/: docker-compose.yml
src/: main.cpp
